[project]
name = "runway-surfaces"
version = "0.0.1"
authors = [
	{name = "melhajj06"},
]
readme = "README.md"
license-files = ["LICENSE.txt"]
dependencies = [
	"numpy",
	"sympy",
	"functools"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
PDF = [
	"pytest"
]