[project]
name = "runway-surfaces"
version = "1.0.0"
authors = [
	{name = "melhajj06"},
]
readme = "README.md"
license-files = ["LICENSE.txt"]
dependencies = [
	"numpy",
	"sympy"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
PDF = [
	"pytest",
	"sphinx"
]